loader api docs
