# src/apis/loaderAPI.ts
@@ -5,6 +5,7 @@ import { IoCSymbol } from '../helpers/decorators/iocSymbol';
 import { IAppState } from '../ioc/interfaces/logic';
 import { IBlocksModule, ILoaderModule, ISystemModule } from '../ioc/interfaces/modules';
 import { Symbols } from '../ioc/symbols';
+import { ResponseSchema, OpenAPI } from 'rc-openapi-gen'
 
 @JsonController('/api/loader/status')
 @IoCSymbol(Symbols.api.loader)
@@ -23,6 +24,7 @@ export class LoaderAPI {
   private systemModule: ISystemModule;
 
   @Get('/')
+  @ResponseSchema('responses.loader.getStatus')
   public getStatus() {
     return {
       loaded: this.loaderModule.loaded,
@@ -30,6 +32,7 @@ export class LoaderAPI {
   }
 
   @Get('/sync')
+  @ResponseSchema('responses.loader.getStatusSync')
   public getStatusSync() {
     return {
       broadhash: this.systemModule.broadhash,
@@ -40,6 +43,7 @@ export class LoaderAPI {
   }
 
   @Get('/ping')
+  @ResponseSchema('responses.loader.ping')
   public ping() {
     let status = false;
     if (this.blocksModule.lastBlock) {
